# amtutorial

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  index.html  pyproject.toml  readme.html.md  settings.ini
.github/workflows/: deploy.yaml
_docs/: README.html  README.md  index.html  index.ipynb  index.md  readme.html  readme.html.md  readme_2.html  readme_lowercase.html  readme_lowercase.html.md  search.json  sitemap.xml
_docs/00_tutorial/: dense_storage.html  dense_storage.html.md
_docs/lib/: data_utils.html  data_utils.html.md  eqx_utils.html  eqx_utils.html.md  index.html  pokemon_sprites.html  pokemon_sprites.html.md
_docs/tutorial/: dense_storage.html  dense_storage.html.md  diffusion_as_memory.html  diffusion_as_memory.html.md  (+7 more)
_tutorial_ipynbs/: 01_energy_transformer.ipynb  02_diffusion_as_memory.ipynb  03_distributed_memory.ipynb
amtutorial/: _modidx.py  data_utils.py  eqx_utils.py  pokemon_sprites.py
data/: pokesprites_names.txt  pokesprites_pixels.npy
lib/: data_utils.html  index.html  index.ipynb  index.md
nbs/: README.qmd  _quarto.yml  index.ipynb  index.qmd  nbdev.yml  readme.qmd  references.bib  sidebar.yml
presentations/: hamux-et.qmd
scripts/: export_qmd_as_ipynb.sh  prep_colab_nbs.sh  prep_deploy.sh  sync_dependencies.py
tutorial/: dense_storage.html  diffusion_as_memory.html  distributed_memory.html  distributed_memory.html.md  energy_transformer.html  index.html
tutorial_ipynbs/: 00_dense_storage.ipynb  01_energy_transformer.ipynb  02_diffusion_as_memory.ipynb  03_distributed_memory.ipynb  index.ipynb
(+24 files in other folders)
