[project]
name="amtutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Hoover", email = "24350185+bhoov@users.noreply.github.com" }
]
requires-python=">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "equinox>=0.11.10",
    "ffmpeg-python>=0.2.0",
    "imageio>=2.37.0",
    "jax>=0.4.30",
    "matplotlib>=3.9.4",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
amtutorial = "amtutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
    "nbdev",
    "nbformat>=5.10.4",
]

[tool.uv.sources]
nbdev = { git = "https://github.com/bhoov/nbdev.git", rev = "qmd_support" }
